# generator

./: Cargo.toml  SETUP.md  package.json  register.html  schema.sql  wrangler.toml
public/: app.html  app.js  presentation.html  presentation.js
src/: auth.rs  constants.rs  crypto.rs  handlers.rs  lib.rs  models.rs  response.rs  utils.rs
