[package]
name = "generator"
version = "0.1.0"
edition = "2021"
authors = ["KrvyFT <KrvyFT@proton.me>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'd1'] }
worker-macros = { version = "0.7", features = ['http'] }
http = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
aes-gcm = "0.10"
getrandom = { version = "0.2", features = ["js"] }
